mik-sql-macros/tests/ui/sql/unknown_operator.stderr
error: Unknown operator '$unknown'.

       Valid operators:
       • Comparison: $eq, $ne, $gt, $gte, $lt, $lte
       • Collection: $in, $nin
       • String: $like, $ilike, $starts_with, $ends_with, $contains
       • Range: $between
       • Logical: $and, $or, $not
 --> tests/ui/sql/unknown_operator.rs:7:28
  |
7 |         filter: { name: { $unknown: "test" } },
  |                            ^^^^^^^
